--- a/src/components/TableArea.css
+++ b/src/components/TableArea.css
@@ -5,7 +5,7 @@
   /* background-color: white; */
   border: 1px solid black;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 5em;
+  gap: 10em;
 }
 
 .table {
@@ -17,7 +17,8 @@
   width: 250px;
   height: 150px;
   background-color: #ccc;
-  border: 1px solid #fff;
+  border: none;
+  outline: 2px solid white;
 }
 
 .chair {
@@ -27,28 +28,38 @@
   border-radius: 50%;
   background-color: #ccc;
   position: absolute;
+  cursor: pointer;
 }
 
 .chair-occupied {
   background-color: #222;
+  border: none;
 }
 
 .chair-0 {
+  clip-path: inset(0% 0% 50% 0%);
+
   top: -30px;
   left: 20px;
 }
 
 .chair-1 {
+  clip-path: inset(0% 0% 50% 0%);
+
   top: -30px;
   right: 20px;
 }
 
 .chair-2 {
+  clip-path: inset(50% 0% 0% 0%);
+
   bottom: -30px;
   left: 20px;
 }
 
 .chair-3 {
+  clip-path: inset(50% 0% 0% 0%);
+
   bottom: -30px;
   right: 20px;
 }
