--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 a {
   font-weight: 500;
   color: #646cff;
