--- a/src/components/Chair.css
+++ b/src/components/Chair.css
@@ -66,8 +66,10 @@
   position: absolute;
   z-index: 10;
   background-color: white;
-  padding: 0.25em;
+  padding: 0.5em;
   border: 1px solid black;
+  box-shadow: 5px 5px 5px #0007;
+  width: min-content;
   border-radius: 0.5em;
   cursor: pointer;
   transition: all 300ms ease;
