--- a/src/components/Filter.css
+++ b/src/components/Filter.css
@@ -1,23 +1,3 @@
-.filter-dropdown {
-  display: flex;
-  flex-direction: column;
-}
-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.primary-checkboxes {
-  display: flex;
-  justify-content: space-evenly;
-}
-.job-title {
-}
-.team-checkboxes {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-.job-title-checkboxes {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+.check-box-shadow {
+  box-shadow: 5px 5px 5px #0007;
 }
